--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,10 @@ jobs:
       - run:
           name: Push Staging
           command: |
+            echo "<< pipeline.git.base_revision >>"
+            TAG="<< pipeline.git.base_revision>>"
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              docker push $DOCKER_IMAGE:$DOCKER_TAG
+              docker push $DOCKER_IMAGE:$TAG
             else
               echo "Skipped";
             fi
@@ -55,7 +57,7 @@ jobs:
           name: Deploy
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_RELEASE_IP "(cd ~/TeamX-GitOps/simple-app; ./deploy.simple.sh)"
+              ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_RELEASE_IP "(cd ~/TeamX-GitOps/simple-app; export TAG="<< pipeline.git.base_revision>>"; ./deploy.simple.sh)"
             else
               echo "Skipped";
             fi
