--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
             echo "<< pipeline.git.base_revision >>"
             TAG="<< pipeline.git.base_revision>>"
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              docker tag $DOCKER_IMAGE:$DOCKER_TAG $DOCKER_IMAGE:$TAG
               docker push $DOCKER_IMAGE:$TAG
             else
               echo "Skipped";
