--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,8 +58,8 @@ jobs:
           name: Deploy
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_RELEASE_IP "(cd ~/TeamX-GitOps/simple-app; export TAG="<< pipeline.git.base_revision>>"; ./deploy.simple.sh)"
-              # ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_RELEASE_IP "(cd ~/TeamX-GitOps/simple-app; export TAG="<< pipeline.git.base_revision>>"; ./deploy.argo.sh)"
+              # ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_RELEASE_IP "(cd ~/TeamX-GitOps/simple-app; export TAG="<< pipeline.git.base_revision>>"; ./deploy.simple.sh)"
+              ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_RELEASE_IP "(cd ~/TeamX-GitOps/simple-app; export TAG="<< pipeline.git.base_revision>>"; ./deploy.argo.sh)"
             else
               echo "Skipped";
             fi
